# medical-ontological-reasoning

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: default.yaml  kb.yaml  paths.yaml
notebooks/: eda.ipynb
reports/: step0_file_stats.csv  step0_kb_audit.md  step1_linker_eval.md
scripts/: audit_kb.py  build_kb.py  build_kb_index.py  package_output.py  run_baseline.py  run_inference.py
src/: __init__.py  schema.py
src/assertion/: __init__.py  classifier.py  context_rules.py  rules.py
src/data_gen/: __init__.py  synth_labeler.py  translate.py
src/eval/: __init__.py  harness.py  jaccard.py  wer.py
src/linking/: __init__.py  base.py  drug_parser.py  embedding_index.py  icd10.py  icd_linker.py  kb.py  matcher.py  rxnorm.py
src/ner/: __init__.py  encoder_bio.py  gliner_extractor.py  hybrid.py  lab_regex.py  llm_ner.py  rule_based.py
src/pipeline/: __init__.py  baseline_v2.py  run.py
src/utils/: __init__.py  io.py  vn_num.py
tests/: test_drug_parser.py  test_eval.py  test_vn_num.py
